--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 server_contact_made(good news!)
 <Br>
 Server on halt mode until decided by admin.
+<br>
+<h1>Welcome to Wild Klyde's Natrual Habitat!!</h1>
