--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ server_contact_made(good news!)
 Server on halt mode until decided by admin.
 <br>
 <h1>Welcome to Wild Klyde's Natrual Habitat!!</h1>
+<a href="panel.1.html">Website Admin Panel</a>
