--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
+<font face="arial">
+<style>
+iframe {
+	font-family: courier;
+}
+</style>
+<Br>
 server_contact_made(good news!)
 <Br>
 Server on halt mode until decided by admin.
 <br>
 <h1>Welcome to Wild Klyde's Natrual Habitat!!</h1>
+NOTE: SORRY FOR THE TECHNICAL STUFF, IT'LL CLEAR UP AT SOME POINT.
+<br>
+
 <a href="panel.1.html">Website Admin Panel</a>
+<br>
+<iframe style="border: 0px; height: 500" src="log.1.txt">
