--- a/index.html
+++ b/index.html
@@ -4,14 +4,26 @@ iframe {
 	font-family: courier;
 }
 
+body {
+	background-image: url("bg.gif");
+	background-size: 100% 100%;
+}
+
+b {
+	text-shadow: 2px 2px black;
+}
 </style>
+<b>
+<font color="white" size=5>
 <marquee style="background-color: blue;color: white;"><b>Hello there! If you haven't followed BelladonnaBonnie or Cyanide_Klyde on Twitch, what are you doing with your life? Well, you can find them by clicking the links below this text.</b></marquee>
-<h1>Welcome to Wild Klyde's Natrual Habitat!!</h1>
+<br>
+<img src="welcome.gif">
+<br>
 Follow Cyanide_Klyde <a href="https://www.twitch.tv/cyanide_klyde">here</a>
 <Br>
 Follow BelladonnaBonnie <a href="https://www.twitch.tv/belladonnabonnie">here</a>
 <Br>
-<img src="about.png">
+<img src="about.gif">
 <br>
 Well, we don't know too much about Wild Klyde's adventures, outside of the amazing streams they have on Twitch.
 <Br>
@@ -21,4 +33,3 @@ him playing games, talking to viewers, everything you could want from a Klyde!
 <br>
 <img src="klyde2.gif" height="500">
 <br>
-<iframe style="border: 0px; height: 500" src="log.1.txt">
