--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ iframe {
 body {
 	background-image: url("bg.gif");
 	background-size: 100% 100%;
+	background-blur: 8px;
+}
+
+.bg-image {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
 }
 
 b {
@@ -16,6 +22,12 @@ b {
 <b>
 <font color="white" size=5>
 <marquee style="background-color: blue;color: white;"><b>Hello there! If you haven't followed BelladonnaBonnie or Cyanide_Klyde on Twitch, what are you doing with your life? Well, you can find them by clicking the links below this text.</b></marquee>
+<br>
+<span style="color: lime;">
+<a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a>
+<br>
+<a href="bonniesgarden/bonnie.html" style="text-decoration: none;color: pink;">Bonnie's Garden</a>
+</span>
 <br>
 <img src="welcome.gif">
 <br>
