--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@ b {
 <marquee style="background-color: blue;color: white;"><b>Hello there! If you haven't followed BelladonnaBonnie or Cyanide_Klyde on Twitch, what are you doing with your life? Well, you can find them by clicking the links below this text.</b></marquee>
 <br>
 <span style="color: lime;">
-<a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a>
-<br>
-<a href="bonniesgarden/bonnie.html" style="text-decoration: none;color: pink;">Bonnie's Garden</a>
+<a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a> - 
+<a href="bonniesgarden/bonnie.html" style="text-decoration: none;color: pink;">Bonnie's Garden</a> - 
+<a href="rollingsrave/rolling.html" style="text-decoration: none;color: red;" class="colorchanger">Rolling's Raving Party</a>
+.colorchanger {
+  animation: color-change 1s infinite;
+}
+
+@keyframes color-change {
+  0% { color: red; }
+  50% { color: blue; }
+  100% { color: red; }
+}
+
 </span>
 <br>
 <img src="welcome.gif">
@@ -37,7 +47,7 @@ Follow BelladonnaBonnie <a href="https://www.twitch.tv/belladonnabonnie">here</a
 <Br>
 <img src="about.gif">
 <br>
-Well, we don't know too much about Wild Klyde's adventures, outside of the amazing streams they have on Twitch.
+Well, we don't know too much about Wild Klyde's adventures, outside of the amazing streams they have on <span style="color: purple;">Twitch</span>.
 <Br>
 But here's what we do know. Klyde ------, known on Twitch as Wild Klyde, Cyanide_Klyde, or just Klyde, streams 
 <br>
