--- a/rollingsrave/rolling.html
+++ b/rollingsrave/rolling.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Klyde's Corner</title>
+<title>Rolling's Raving Party</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -15,10 +15,8 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-  background-image: url("banner.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
+  background-image: url("banner.jpg");
+  background-size: 100% 100%;
   color: white;
   font-size: 30px;
 }
@@ -30,13 +28,15 @@ body {
 <body>
 
 <div class="header">
-  <h1>Wild Klyde!</h1>
-  <p>The Coolest Klyde with the coolest Bonnie!</p>
+  <h1>rolling2_the_beat</h1>
+  <p>*burp* i make websites</p>
 </div>
 
 <div class="content">
   <h1>Stuff about things</h1>
-  <p>I'll ask them what to add here! :)</p>
+  <p>Hello, It's Rolling here, I made this website with my own two hands.</p>
+  <p>What? Want to know more about me? Fine, well, I have a dog that's 14, his name is Sammy,</p>
+  <p>I could put a picture on here if I get the chance to do that. More on me later</p>
   <a href="../index.html">🡄Return to Homepage</a>
 </div>
 
