--- a/rollingsrave/rolling.html
+++ b/rollingsrave/rolling.html
@@ -16,7 +16,8 @@ body {
   padding: 60px;
   text-align: center;
   background-image: url("banner.jpg");
-  background-size: 100% 100%;
+  background-size: 100% ;
+  background-position: center;
   color: white;
   font-size: 30px;
 }
