--- a/rollingsrave/rolling.html
+++ b/rollingsrave/rolling.html
@@ -15,7 +15,7 @@ body {
 .header {
   padding: 60px;
   text-align: center;
-  background-image: url("banner.jpg");
+  background-image: url("https://images3.alphacoders.com/803/thumb-1920-803482.jpg");
   background-size: 100% ;
   background-position: center;
   color: white;
@@ -30,7 +30,7 @@ body {
 
 <div class="header">
   <h1>rolling2_the_beat</h1>
-  <p>*burp* i make websites</p>
+  <p>*burp* i make websites & code & stuff</p>
 </div>
 
 <div class="content">
