--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Follow BelladonnaBonnie <a href="https://www.twitch.tv/belladonnabonnie">here</a
 <br>
 Well, we don't know too much about Wild Klyde's adventures, outside of the amazing streams they have on <span style="color: purple;">Twitch</span>.
 <Br>
-But here's what we do know. Klyde ------, known on Twitch as Wild Klyde, Cyanide_Klyde, or just Klyde, streams 
+But here's what we do know. Klyde ██████, known on Twitch as Wild Klyde, Cyanide_Klyde, or just Klyde, streams 
 <br>
 him playing games, talking to viewers, everything you could want from a Klyde!
 <br>
