--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ body {
 b {
 	text-shadow: 2px 2px black;
 }
+
+.invisible {
+	opacity: 0;
+}
 </style>
 <b>
 <font color="white" size=5>
@@ -45,3 +49,4 @@ him playing games, talking to viewers, everything you could want from a Klyde!
 <br>
 <img src="klyde2.gif" height="500">
 <br>
+<span class="invisible">Testing..</span>
