--- a/klydescorner/klyde.html
+++ b/klydescorner/klyde.html
@@ -36,7 +36,8 @@ body {
 
 <div class="content">
   <h1>Stuff about things</h1>
-  <p>I'll ask them what to add here! :)</p>
+  Read The Book Of Klyde <a href="book.txt">here</a>
+  <br>
   <a href="../index.html">🡄Return to Homepage</a>
 </div>
 
