--- a/klydescorner/klyde.html
+++ b/klydescorner/klyde.html
@@ -38,6 +38,8 @@ body {
   <h1>Stuff about things</h1>
   Read The Book Of Klyde <a href="book.txt">here</a>
   <br>
+  <img src="bookcover.png" height=350>
+  <br>
   <a href="../index.html">🡄Return to Homepage</a>
 </div>
 
