--- a/bonniesgarden/bonnie.html
+++ b/bonniesgarden/bonnie.html
@@ -34,7 +34,42 @@ body {
 
 <div class="content">
   <h1>Stuff about things</h1>
-  <p>I'll ask them what to add here! :)</p>
+  <p>Welcome to my info, lets start off by saying I come from a big family so family means everything to me, 
+  <Br>
+  I have 3 sisters and a brother all still in contact with, The biggest supporter in my life was my mother she
+  <Br>
+  was there for me with everything I threw at her, I would not be who I am today if it wasn't for her always 
+  <Br>
+  being there for me. When I was 17 she lost her 2 year battle with stage 4 Colon Cancer, that was the hardest 
+  <Br>
+  thing I have ever gone through I miss her every single moment of every day. I wish daily that I could of spent
+  <Br>
+  one more day with her. But I could literally talk about her for hours so if you guys have any other questions 
+  <Br>
+  about her I would gladly answer them.
+  <br>
+  Klyde was my life saver and my rock When things were not so good in my life, after 7 years of being with him
+  <Br>
+  I still could not ask  for a better Second half and bestfriend, when I was in kindergarten he was in my class
+  <Br>
+  then he disappeared until he came back to my school in 6th grade I remember the day the teacher introduced him
+  <Br>
+  to the class and I swore in my head he was the one for me, a few years after that we finally got together 
+  <Br>
+  freshman year and have been together since. so yes we are high school sweethearts! Klyde and I have over thousands
+  <Br>
+  of memories together to many to name but maybe someday we can have a night of streaming all the crazy times!
+  <Br>
+  The one and only baby ALITA came into this world as the first baby of the new year a 2:28 am, weighing in at 
+  <br>
+  7lbs and 19inches long! Ever sense that day our lives have changed to the better! Alita is the happiest baby 
+  <br>
+  in the world and after a lot of conversations about weather  we should stream her live or not so many people 
+  <br>
+  have supported the idea and we are so amazed to see her fan base growing everyday! so THANK YOU, for respecting
+  <br>
+  our family and our baby!
+  <br>
   <a href="../index.html">🡄Return to Homepage</a>
 </div>
 
