--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ b {
 .invisible {
 	opacity: 0;
 }
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
 </style>
 <b>
 <font color="white" size=5>
@@ -30,8 +35,10 @@ b {
 <span style="color: lime;">
 <a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a> - 
 <a href="bonniesgarden/bonnie.html" style="text-decoration: none;color: pink;">Bonnie's Garden</a> - 
-<a href="rollingsrave/rolling.html" style="text-decoration: none;color: red;" class="colorchanger">Rolling's Raving Party</a>
+<a href="rollingsrave/rolling.html" style="text-decoration: none;color: red;" class="colorchanger">Rolling's Raving Party</a> - 
+<a style="text-decoration: none;color: orange;" href="video-archive.html">Video Archive (Still In Beta!)</a>
 </span>
+
 <br>
 <img src="welcome.gif">
 <br>
