--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@ iframe {
 	font-family: courier;
 }
 
+::selection {
+  background: lime; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: red; /* Gecko Browsers */
+}
+
 body {
 	background-image: url("bg.gif");
 	background-size: 100% 100%;
@@ -30,7 +37,7 @@ b {
 </style>
 <b>
 <font color="white" size=5>
-<marquee style="background-color: blue;color: white;"><b>Hello there! If you haven't followed BelladonnaBonnie or Cyanide_Klyde on Twitch, what are you doing with your life? Well, you can find them by clicking the links below this text.</b></marquee>
+<marquee style="background-color: blue;color: white;"><b>Website Created By rolling2_the_beat AkA Honest. Thanks for visiting!</b></marquee>
 <br>
 <span style="color: lime;">
 <a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a> - 
