--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ b {
 </style>
 <b>
 <font color="white" size=5>
-<marquee style="background-color: blue;color: white;"><b>Website Created By rolling2_the_beat AkA Honest. Thanks for visiting!</b></marquee>
+<marquee style="background-color: blue;color: white;"><b>Website Created By <a href="https://twitch.tv/rolling2_the_beat" style="color:red;">rolling2_the_beat</a> AkA Honest. Thanks for visiting!</b></marquee>
 <br>
 <span style="color: lime;">
 <a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a> - 
@@ -62,6 +62,7 @@ But here's what we do know. Klyde ██████, known on Twitch as Wild Kl
 him playing games, talking to viewers, everything you could want from a Klyde!
 <br>
 <img src="klyde2.gif" height="500">
+<img src="klydeboard.gif" height="500">
 <br>
 <span class="invisible">Testing..</span>
 <audio autoplay>
