--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <font face="arial">
+<a href="https://twitch.tv/cyanide_klyde"><img src="logo.png"></a><a href="https://twitch.tv/belladonnabonnie"><img src="logo.bonnie.png"></a><a href="https://twitch.tv/rolling2_the_beat"><img src="logo.rolling.png"></a><a href="https://www.youtube.com/channel/UCoh3UANMYcNY3hOmkaXlfjg"><img src="Cyanide Archives.png"></a>
 <style>
 iframe {
 	font-family: courier;
@@ -42,16 +43,13 @@ b {
 <span style="color: lime;">
 <a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a> - 
 <a href="bonniesgarden/bonnie.html" style="text-decoration: none;color: pink;">Bonnie's Garden</a> - 
-<a href="rollingsrave/rolling.html" style="text-decoration: none;color: red;" class="colorchanger">Rolling's Raving Party</a> - 
+<a href="rollingsrave/newuser.html" style="text-decoration: none;color: red;" class="colorchanger">Rolling's Raving Party</a> - 
 <a style="text-decoration: none;color: orange;" href="video-archive.html">Video Archive (Still In Beta!)</a>
 </span>
 
 <br>
 <img src="welcome.gif">
 <br>
-Follow Cyanide_Klyde <a href="https://www.twitch.tv/cyanide_klyde">here</a>
-<Br>
-Follow BelladonnaBonnie <a href="https://www.twitch.tv/belladonnabonnie">here</a>
 <Br>
 <img src="about.gif">
 <br>
