--- a/klydescorner/klyde.html
+++ b/klydescorner/klyde.html
@@ -38,6 +38,8 @@ body {
   -webkit-transform: scale(1.5); /* Safari 3-8 */
   transform: scale(1.5); 
 }
+
+
 </style>
 </head>
 <body>
@@ -55,6 +57,17 @@ body {
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="bookcover.png" height=350 class="zoom">
   <br>
+  <a href="https://twitch.tv/cyanide_klyde" style="text-decoration:none;a:hover{ color: orange;}">
+  <h1>Cyanide_Klyde On Twitch</h1></a>
+  Sometimes, Wild Klyde will stream on Twitch!
+  <br>
+  You can talk to him, look at him, play games
+  <Br>
+  with him, for free! Get an account on Twitch 
+  <Br>
+  and follow today!
+  <br>
+
   <a href="../index.html">🡄Return to Homepage</a>
 </div>
 
