--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <html>
 <head>
-  <meta http-equiv='refresh' content='0; URL=offline.txt'>
 </head>
 <body>
+<font face=arial>
+<div align=center>
+<img src="tv.png" height=200>
+<h1>Error 404</h1>
+
+<b>The Klydes Ran out.</b>
+<br>
+What this means is that all of our Klydes doing jumping jacks
+<br>
+to power the server, got tired and ran out for a drink of water.
+<br>
+Be back online soon.
+</div>
 </body>
 </html>
