--- a/index.html
+++ b/index.html
@@ -1,19 +1,69 @@
-<html>
-<head>
-</head>
-<body>
-<font face=arial>
-<div align=center>
-<img src="tv.png" height=200>
-<h1>Error 404</h1>
+<font face="arial">
+<a href="https://twitch.tv/cyanide_klyde"><img src="logo.png"></a><a href="https://twitch.tv/belladonnabonnie"><img src="logo.bonnie.png"></a><a href="https://twitch.tv/rolling2_the_beat"><img src="logo.rolling.png"></a><a href="https://www.youtube.com/channel/UCoh3UANMYcNY3hOmkaXlfjg"><img src="Cyanide Archives.png"></a>
+<style>
+iframe {
+	font-family: courier;
+}
 
-<b>The Klydes Ran out.</b>
+::selection {
+  background: lime; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: red; /* Gecko Browsers */
+}
+
+body {
+	background-image: url("bg.gif");
+	background-size: 100% 100%;
+	background-blur: 8px;
+}
+
+.bg-image {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+
+b {
+	text-shadow: 2px 2px black;
+}
+
+.invisible {
+	opacity: 0;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+</style>
+<b>
+<font color="white" size=5>
+<marquee style="background-color: blue;color: white;"><b>Website Created By <a href="https://twitch.tv/rolling2_the_beat" style="color:red;">rolling2_the_beat</a> AkA Honest. Thanks for visiting!</b></marquee>
 <br>
-What this means is that all of our Klydes doing jumping jacks
+<span style="color: lime;">
+<a href="klydescorner/klyde.html" style="text-decoration: none;color: lime;">Klyde's Corner</a> - 
+<a href="bonniesgarden/bonnie.html" style="text-decoration: none;color: pink;">Bonnie's Garden</a> - 
+<a href="rollingsrave/newuser.html" style="text-decoration: none;color: red;" class="colorchanger">Rolling's Raving Party</a> - 
+<a style="text-decoration: none;color: orange;" href="video-archive.html">Video Archive (Still In Beta!)</a>
+</span>
+
 <br>
-to power the server, got tired and ran out for a drink of water.
+<img src="welcome.gif">
 <br>
-Be back online soon.
-</div>
-</body>
-</html>
+<Br>
+<img src="about.gif">
+<br>
+Well, we don't know too much about Wild Klyde's adventures, outside of the amazing streams they have on <span style="color: purple;">Twitch</span>.
+<Br>
+But here's what we do know. Klyde ██████, known on Twitch as Wild Klyde, Cyanide_Klyde, or just Klyde, streams 
+<br>
+him playing games, talking to viewers, everything you could want from a Klyde!
+<br>
+<img src="klyde2.gif" height="500">
+<img src="klydeboard.gif" height="500">
+<br>
+<span class="invisible">Testing..</span>
+<audio autoplay>
+  <source src="music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
