--- a/panel.mirror.html
+++ b/panel.mirror.html
@@ -1,1 +1,29 @@
 Error, contact not made with PMC-Server#94737
+<br>
++Script.OnBoot
+<br>
+#Lang = ServerSide
+<br>
+<br>
+<br>
+# Send email to my address when atleast 3 packets of 5MB are recieved back. #
+<br>
+emailAdd = "unlimitedminecraft2011@gmail.com"
+<br>
+<br>
+OnBoot, Email:Send;"Website is online! msg from PMC-Server#94737" - emailAdd
+<br>
+<br>
+If Script.OnBoot = Last.Line
+<br>
+	>> panel.mirror.* - >> exit & reboot
+	<br>
+	>> config.yml
+	<br>
+	>>> 5MB x4 - "the-vault-betaa"
+
+@Message-Discord: "Aiden0X, Ping95oof, JimBob12, xccvoid, 3th@n_ThaK1d, alexboiiii.exe," :server="rolling2_the_beat's_server":
+AGM = Discord.com / Discord:App:BootWin;10,8.1,8,7,XP,ME;
+Msg-send = "Server is online, get your files! :)"
+user = rollingkid99
+pass = cfgmyfiles98.py+cfgmyfiles97.py + !compile:47pass.txt, base64>=0.1.Binary>Unicode.64bit.v3.4.7
